# foghorn

./: .gitmodules  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
libs/: CMakeLists.txt  build-jack2.sh
patches/: netbase.patch  options.patch
source/: lib.cpp  simple_playback.c
test/: CMakeLists.txt
test/source/: foghorn_test.cpp
